--- a/index.html
+++ b/index.html
@@ -1,14 +1,32 @@
-<script src="jquery-1.10.2.min.js"></script>
+<link rel="stylesheet" type="text/css" href="measurning_devices.css">
 
-<div id="results"></div>
+<script src="jquery-1.10.2.min.js"></script>
+<script src="measurning_devices.js"></script>
 
 <script>
-$.ajax({
-	url: "http://192.168.4.222",
-	type: 'GET',
-	dataType: 'jsonp',
-	success: function(data){
-		alert(data.a);
-	}
+$(document).ready(function() {
+	initMD();
 });
 </script>
+
+<div class="measurningDevices">
+	<div class="measurningDevice" url="http://localhost:9999/0">
+		<span class="name">Waga zgrubna</span>
+		<span class="value"></span>
+		<input type="radio" name="measurningDevices" value="0">
+	</div>
+	<div class="measurningDevice" url="http://localhost:9999/1">
+		<span class="name">Waga dokladna</span>
+		<span class="value"></span>
+		<input type="radio" name="measurningDevices" value="1">
+	</div>
+</div>
+
+<div class="items">
+	<div class="item">
+		<span class="name" title="Nazwa skladnika">Item Name</span>
+		<span class="setValue" title="Wartosc zadana">0.350</span>
+		<span class="realValue" title="Wartosc odmierzona">0,000</span>
+		<button type="button">Odmierz</button>
+	</div>
+</div>
