--- a/_www/index.html
+++ b/_www/index.html
@@ -1,21 +1,21 @@
-<link rel="stylesheet" type="text/css" href="measurning_devices.css">
+<link rel="stylesheet" type="text/css" href="devices.css">
 
 <script src="jquery-1.10.2.min.js"></script>
-<script src="measurning_devices.js"></script>
+<script src="devices.js"></script>
 
 <script>
 $(document).ready(function() {
-	initMD();
+	initDevices();
 });
 </script>
 
-<div class="measurningDevices">
-	<div class="measurningDevice" url="http://localhost:9999/0">
+<div class="devices">
+	<div class="device" url="http://localhost:9999/0">
 		<span class="name">Waga zgrubna</span>
 		<span class="value"></span>
 		<input type="radio" name="measurningDevices" value="0">
 	</div>
-	<div class="measurningDevice" url="http://localhost:9999/1">
+	<div class="device" url="http://localhost:9999/1">
 		<span class="name">Waga dokladna</span>
 		<span class="value"></span>
 		<input type="radio" name="measurningDevices" value="1">
