--- a/_www/index.html
+++ b/_www/index.html
@@ -10,12 +10,16 @@ $(document).ready(function() {
 </script>
 
 <div class="devices">
-	<div class="device" url="http://192.168.4.222:9999/0">
+	<div class="device" url="http://localhost:9999/0">
 		<span class="name">Waga zgrubna</span>
 		<span class="value"></span>
 	</div>
-	<div class="device" url="http://192.168.4.222:9999/1">
+	<div class="device" url="http://localhost:9999/1">
 		<span class="name">Waga dokladna</span>
+		<span class="value"></span>
+	</div>
+	<div class="device" url="http://localhost:9999/2">
+		<span class="name">Multimetr</span>
 		<span class="value"></span>
 	</div>
 </div>
@@ -26,16 +30,16 @@ $(document).ready(function() {
 	<div class="item">
 		<span class="name" title="Nazwa skladnika">Barwnik zolty</span>
 		<input type="text" class="setValue" title="Wartosc zadana" value="0.300" readonly/>
-		<input type="text" class="realValue" title="Wartosc odmierzona" value="0.000" areadonly/>
+		<input type="text" class="realValue" title="Wartosc odmierzona" value="0.000" readonly/>
 	</div>
 	<div class="item">
 		<span class="name" title="Nazwa skladnika">Barwnik niebieski</span>
 		<input type="text" class="setValue" title="Wartosc zadana" value="2.500" readonly/>
-		<input type="text" class="realValue" title="Wartosc odmierzona" value="0.000" areadonly/>
+		<input type="text" class="realValue" title="Wartosc odmierzona" value="0.000" readonly/>
 	</div>
 	<div class="item">
 		<span class="name" title="Nazwa skladnika">Zageszczenie</span>
 		<input type="text" class="setValue" title="Wartosc zadana" value="12.000" readonly/>
-		<input type="text" class="realValue" title="Wartosc odmierzona" value="0.000" areadonly/>
+		<input type="text" class="realValue" title="Wartosc odmierzona" value="0.000" readonly/>
 	</div>
 </div>
